--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,58 @@
 body{
 height: 100vh;
 background:linear-gradient(3deg, #000000,  #3533CD);
+justify-content: flex-end;
+align-items: flex-start;
+margin-right: 150px;
+display: flex;
+}
+.video{
+  display: none;
+}
+.titleMenuHome{
+  display: flex;
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  color: #FEDC58;
+  
+}
+@media (min-width:1200px) {
+  body {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start; 
+    margin-right: 50px;
+    margin-top: 25px; 
+  }
+  header{
+    position: relative;
+    border: 2px solid #FEDC58;
+    height: 650px;
+    width: 500px;
+    gap: 60px;
+    overflow: hidden;
+  }
+ 
+  .titleMenuHome{
+    display: flex;
+    top: 1px;
+    left:25px;
+    font-size: 50pt;
 
 }
-
-.titleMenuHome{
-  margin-top: 30px;
-  color: #FEDC58;
-  text-align: center;
-  font-size: 20pt;
 }
 header{
   display: flex;
   justify-content:center;
   align-items: flex-start;
+
 }
 main{
   display:flex;
   justify-content: center;
   align-items: center;
+
 }
+
+
