--- a/src/componentes/ContainerHome/ContainerHome.css
+++ b/src/componentes/ContainerHome/ContainerHome.css
@@ -1,6 +1,6 @@
 .box-presentation {
-  position: absolute;
-  top: 35%;
+position:absolute;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -21,16 +21,30 @@
   overflow: hidden;
   width: 200px;
 }
+.circle-img-home:hover{
+  animation: rotacao linear 5000ms;
+}
+@keyframes rotacao {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
 h3 {
   position: absolute;
   bottom: 60px;
   left: 30px;
   color: #ffc91f;
-  font-weight: 500;
+  font-weight: 700;
+  text-shadow: 5px 5px 10px #000000;
+  
 }
 #minhaImg {
   height: 170px;
 }
+
 
 .contentRedeSocial {
   position: absolute;
@@ -42,7 +56,7 @@ h3 {
 
 #planoDeFundo {
   height: 500px;
-  opacity: 50%;
+  opacity: 90%;
 }
 #container-planoDeFundo {
   position: relative;
