--- a/src/componentes/ContainerHome/ContainerHome.css
+++ b/src/componentes/ContainerHome/ContainerHome.css
@@ -1,5 +1,5 @@
 .box-presentation {
-position:absolute;
+position:fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -9,7 +9,7 @@ position:absolute;
   width: 250px;
   height: 350px;
   border-radius: 25px;
-  margin-top: 100px;
+  margin-top: 10px;
   flex-direction: column;
   overflow: hidden;
 }
@@ -34,7 +34,7 @@ position:absolute;
 }
 h3 {
   position: absolute;
-  bottom: 60px;
+  top: 220px;
   left: 30px;
   color: #ffc91f;
   font-weight: 700;
