--- a/src/componentes/BtnGitHub/BtnGitHub.css
+++ b/src/componentes/BtnGitHub/BtnGitHub.css
@@ -1,4 +1,18 @@
-#imgRedesSociaisGitHub {
-  margin-top: 10px;
-  height: 50px;
+@media (max-width: 500px) {
+  #imgRedesSociaisGitHub {
+    position: fixed;
+    top: 67%;
+    left: 60%;
+    height: 50px;
+  }
+}
+/*pc*/
+@media (min-width: 1000px) {
+  #imgRedesSociaisGitHub {
+    position: fixed;
+    top: 62.1%;
+    height: 50px;
+    left: 50.2%;
+    transform: translate(-50%, -50%);
+  }
 }
