--- a/src/App.css
+++ b/src/App.css
@@ -1,60 +1,76 @@
+@media(max-width:500px){
+:root {
+--planoDeFundo: linear-gradient(45deg,#000000, #3533cd);
+--titulo:#FFC91F;
+}
+
 body{
-height: 100vh;
-background:linear-gradient(3deg, #000000,  #3533CD);
-justify-content: flex-end;
-align-items: flex-start;
-margin-right: 150px;
-display: flex;
-
-}
-.video{
-  display: none;
-}
-.titleMenuHome{
   display: flex;
-  position: absolute;
-  top: 10%;
-  left: 30%;
-  color: #FEDC58;
-  
-}
-@media (min-width:1200px) {
-  body {
-    display: flex;
-    justify-content:center;
-    align-items: center; 
-    margin-left: 150px;
-   
-  }
-  header{
-    position: relative;
-    height: 650px;
-    width: 500px;
-    border-radius: 25px;
-    overflow: hidden;
-  }
-  
-  .titleMenuHome{
-    display: flex;
-    top: 1px;
-    left:25px;
-    font-size: 50pt;
-    margin-top: 10px;
-    text-shadow: 5px 5px 10px #000000;
-    
-}
-}
-header{
-  display: flex;
-  justify-content:center;
-  align-items: flex-start;
-
-}
-main{
-  display:flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  background: var(--planoDeFundo);
+  color:var(--titulo)
+}
+  body{
+
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+  }
+  .content{
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50% -50%);
+  margin-left: 35px;
+  }
+  header{
+    position: absolute;
+    display: flex;
+    top: 20%;
+    left: 20%;
+    transform: translate(-50% -50%);
+    font-size: 10pt;
+    width: 220px;
+    text-shadow: 5px 5px 6px #000000;
+  }
 
 }
 
+/*pc*/
 
+@media(min-width:100px){
+  :root {
+  --planoDeFundo: linear-gradient(45deg,#000000, #3533cd);
+  --titulo:#FFC91F;
+  }
+  
+  body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: var(--planoDeFundo);
+    color:var(--titulo);
+    flex-direction: column;
+    }
+    .content{
+    top: 20%;
+    left: 50%;
+    transform: translate(-50% -50%);
+    margin-left: 35px;
+    }
+    header{
+      position: fixed;
+      display: flex;
+      top: 10%;
+      left: 50%;
+      transform: translate(-50% -50%);
+      font-size: 10pt;
+      height: 450px;
+      width: 220px;
+      text-shadow: 1px 1px 2px #000000;
+    }
+  
+  }
