--- a/src/componentes/ContainerHome/ContainerHome.css
+++ b/src/componentes/ContainerHome/ContainerHome.css
@@ -1,30 +1,35 @@
-.box-presentation {
-position:fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  align-items: center;
-  border: 2px solid #ffc91f;
-  width: 250px;
-  height: 350px;
-  border-radius: 25px;
-  margin-top: 10px;
-  flex-direction: column;
-  overflow: hidden;
-}
-.circle-img-home {
+
+
+@media(max-width:500px){
+#planoDeFundo{
   position: absolute;
-  margin-top: 25px;
+  top:70%;
+  left:15%;
+  transform: translate(-64% ,-10%);
+  border-radius: 25px;
+  height: 300px;
+  width: 250px;
+  border: 2px solid #ffc91f;
+}
+header{
+  position: fixed;
+  top: 5%;
+  left: 70%;
+  transform: translate(-40%, -50%);
+}
+#minhaImg{
+  position: fixed;
+  height: 150px;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50% ,-50%);
   border-radius: 50%;
   border: 2px solid #ffc91f;
-  overflow: hidden;
-  width: 200px;
 }
-.circle-img-home:hover{
-  animation: rotacao linear 5000ms;
+#minhaImg:hover{
+  animation: rotate 5000ms linear;
 }
-@keyframes rotacao {
+@keyframes rotate {
   0% {
     transform: rotateY(0deg);
   }
@@ -32,32 +37,70 @@ position:fixed;
     transform: rotateY(360deg);
   }
 }
-h3 {
-  position: absolute;
-  top: 220px;
-  left: 30px;
-  color: #ffc91f;
-  font-weight: 700;
-  text-shadow: 5px 5px 10px #000000;
+h3{
+  position:fixed;
+  top: 55%;
+  left: 60%;
+  transform: translate(-50% ,-50%);
+  width: 250px;
+  text-shadow:5px 5px 10px #000000;
+}
+
+}
+
+
+
+
+/*pc*/
+
+
+
+
+@media(min-width:1000px){
+  #planoDeFundo{
+    display: flex;
+    position: fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50% ,-50%);
+    border-radius: 25px;
+    height: 300px;
+    width: 250px;
+    border: 2px solid #ffc91f;
+  }
+  header{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  #minhaImg{
+    position: fixed;
+    height: 150px;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    border-radius: 50%;
+    border: 2px solid #ffc91f;
+  }
+  #minhaImg:hover{
+    animation: rotate 5000ms linear infinite;
+  }
+  @keyframes rotate {
+    0% {
+      transform: rotateY(0deg);
+    }
+    100% {
+      transform: rotateY(360deg);
+    }
+  }
+  h3{
+    position: fixed;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    width: 180px;
+    text-shadow:5px 5px 10px #000000;
+  }
   
-}
-#minhaImg {
-  height: 170px;
-}
-
-
-.contentRedeSocial {
-  position: absolute;
-  display: flex;
-  bottom: 2px;
-}
-
-
-
-#planoDeFundo {
-  height: 500px;
-  opacity: 90%;
-}
-#container-planoDeFundo {
-  position: relative;
-}
+  }
