--- a/src/componentes/PopUp/PopUp.css
+++ b/src/componentes/PopUp/PopUp.css
@@ -1,120 +1,133 @@
 
-@media (min-width:800px) {
-.bodySecundario{
-  position: fixed;
-  top:10%;
-  right: 10%;
-  transform: translate(-50% -30%);
-  display: flex;
-  height:40em;
-  width: 20em;
-  background: #000000;
-  border-radius: 25px;
+@media (max-width:500px) {
 
-  
-}
-.circle-Img{
-  position: relative;
-  display: flex;
-  background-color: #FEDC58;
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  overflow: hidden;
-  justify-content: center;
-  margin: 15px;
-
-}
-
-.circle-Img:hover{
-  display: flex;
-  background-color: #FEDC58;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-  animation: rotacao 5000ms linear;
-}
-@keyframes rotacao {
-  0% {
-    transform: rotateY(0deg);
+  .bodySecundario{
+    position: absolute;
+    top: 5%;
+    left: 2%;
+    transform: translate(-50%,-50%);
+    height: 900px;
+    width: 600px;
+    background-color: black;
+    color: var(--titulo);
   }
-  100% {
-    transform: rotateY(360deg);
+  #conteudo-menu{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: var(--titulo);
+    font-size: 15pt;
   }
-}
-
-#conteudo-menu{
-  display: block;
-  justify-content:flex-start;
-  align-items: flex-start;
-  gap: 5px;
-  height: 40em;
-}
-#foto{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 75px;
-}
-#foto:hover{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-}
-
-h5{
-  margin-top: -50px;
-  margin-right: 30px;
-  justify-content: flex-end;
-  align-items: flex-start;
-  display: flex;
-  color: #FEDC58;
-  font-size: 15pt;
-}
-h5:hover{
-  font-size: 25pt;
-}
 #link-conteudo-menu{
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: -10px;
-  font-size:15pt;
+
 }
+
 #linkStyle{
-  text-decoration: none;
-  color: #FEDC58;
+  top: 10%;
+  left: 10%;
+  position: fixed;
+  color: blue;
+}
+
+  #foto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+    border-radius: 25px;
+  }
+  #closePage{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+
+  }
 
 }
-#linkStyle:hover{
-  text-decoration: none;
-  color: #FEDC58;
-  font-size: 30pt;
 
-}
-#closePage{
+
+/*pc*/
+
+@media (min-width:1000px) {
+
+  .bodySecundario{
+    position: fixed;
+    display: flex;
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%,-50%);
+    height: 600px;
+    width: 300px;
+    background-color: black;
+    color: var(--titulo);
+    z-index: 2;
+    margin-top: 250px;
+    gap: 50pc;
+    flex-direction: column;
+    border-radius: 25px;
+  }
+  #conteudo-menu{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: var(--titulo);
+    font-size: 15pt;
+    gap: 50px;
+  }
+  .circle-Img{
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: yellow 2px solid;
+    overflow: hidden;
+
+  }
+#link-conteudo-menu{
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
-  margin-top: -50px;
-  color: #FEDC58;
-  margin-bottom: 50px;
-  margin-left: 83%;
-  font-size: 15pt;
-  font-family:monospace;
-  border: #FEDC58 3px solid;
-  border-radius: 50%;
-font-size:700 ;
-}
-#closePage:hover{
-  color: red;
-  border: red 3px solid;
+  flex-direction: column;
+  height: 600px;
+  width: 200px;
+
 }
 
+#linkStyle{
+  top: 10%;
+  left: 10%;
+  color: blue;
+}
+
+  #foto{
+    display: flex;
+    margin-top: 100px;
+    margin-right: 20px;
+    height: 150px;
+    border-radius: 25px;
+    
+  }
+  #closePage{
+  position: fixed;
+    bottom: 89%;
+    left: 10%;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+  
+  text-align: center;
+    border: 2px solid var(--titulo);
+  }
 
 }
